import { Column , CreateDateColumn, Entity , PrimaryGeneratedColumn } from "typeorm";

@Entity({name : "tags"})
export class TagEntity {
    @PrimaryGeneratedColumn()
    id: number;

    @Column()
    name: string;

    @CreateDateColumn({ type: "timestamp", default: () => "CURRENT_TIMESTAMP(6)" })
    createdAt: Date
}