import { BeforeInsert, BeforeUpdate, Column, Entity, JoinTable, ManyToMany, OneToMany, PrimaryGeneratedColumn } from "typeorm";
import * as bcrypt from 'bcrypt';
import { ArticleEntity } from "../article/article.entity";
import { CommentEntity } from "../comment/comment.entity";


@Entity({name: 'users'})
export class UserEntity {
    @PrimaryGeneratedColumn("increment")
    id: number

    @Column()
    username: string

    // Make the email obtional for the get profile method functionality in the profile service
    @Column()
    email?: string

    @Column({default: ''})
    bio: string

    @Column({default: ''})
    image: string

    // Make the password optional to be able to update the password or delete it in the future
    @Column()
    password?: string

    @OneToMany(() => ArticleEntity, article => article.author)
    articles: ArticleEntity[]

    @ManyToMany(() => ArticleEntity)
    @JoinTable()
    favorites: ArticleEntity[]

    @OneToMany(() => CommentEntity, comment => comment.author)
    comments: CommentEntity[];

    @BeforeInsert()
    @BeforeUpdate()
    async hashPassword() {
        if (this.password) {
            const salt = await bcrypt.genSalt(10);
            this.password = await bcrypt.hash(this.password, salt);
        }
    }
}